syntax = "proto3";
package upgrade;

import "nic/delphi/proto/delphi/delphi.proto";

enum UpgReqType {
    InvalidCmd = 0;
    UpgStart   = 1;
    UpgAbort   = 2;
}

enum UpgRespType {
    UpgRespPass   = 0;
    UpgRespFail   = 1;
    UpgRespAbort  = 2;
}

// Upgrade Request Status
enum UpgReqStateType {
    PreUpgState                       = 0;
    ProcessesQuiesced                 = 1;
    PostBinRestart                    = 2;
    DataplaneDowntimePhase1Start      = 3;
    DataplaneDowntimePhase2Start      = 4;
    DataplaneDowntimePhase3Start      = 5;
    DataplaneDowntimePhase4Start      = 6;
    Cleanup                           = 7;
    UpgSuccess                        = 8;
    UpgFailed                         = 9;
    UpgAborted                        = 10;
    //Always to be last
    UpgStateTerminal                  = 11;
}

// Upgrade Request Status
enum UpgRespStateType {
    PreUpgStatePass                       = 0;
    PreUpgStateFail                       = 1;
    ProcessesQuiescedPass                 = 2;
    ProcessesQuiescedFail                 = 3;
    PostBinRestartPass                    = 4;
    PostBinRestartFail                    = 5;
    DataplaneDowntimePhase1StartPass      = 6;
    DataplaneDowntimePhase1StartFail      = 7;
    DataplaneDowntimePhase2StartPass      = 8;
    DataplaneDowntimePhase2StartFail      = 9;
    DataplaneDowntimePhase3StartPass      = 10;
    DataplaneDowntimePhase3StartFail      = 11;
    DataplaneDowntimePhase4StartPass      = 12;
    DataplaneDowntimePhase4StartFail      = 13;
    CleanupPass                           = 14;
    CleanupFail                           = 15;
    UpgSuccessPass                        = 16;
    UpgSuccessFail                        = 17;
    UpgFailedPass                         = 18;
    UpgFailedFail                         = 19;
    UpgAbortedPass                        = 20;
    UpgAbortedFail                        = 21;
}

enum UpgType {
    UpgTypeDisruptive            = 0;
    UpgTypeNonDisruptive         = 1;
}

// spec part of the object
message UpgReq {
    option (delphi.update_event) = true;
    delphi.ObjectMeta          Meta            = 1;
    uint32                     Key             = 2;
    UpgReqType                 UpgReqCmd       = 3 [(delphi.event) = true];
}

message UpgResp {
    option (delphi.update_event) = true;
    delphi.ObjectMeta          Meta            = 1;
    uint32                     Key             = 2;
    UpgRespType                UpgRespVal      = 3 [(delphi.event) = true];
    repeated string            UpgRespFailStr  = 4;
}

// status part of the object
message UpgStateReq {
    option (delphi.update_event) = true; 
    delphi.ObjectMeta      Meta              = 1;
    uint32                 Key               = 2;
    UpgReqStateType        UpgReqState       = 3 [(delphi.event) = true];
    UpgType                UpgReqType        = 4 [(delphi.event) = true];
}

message UpgAppResp {
    option (delphi.update_event) = true;
    delphi.ObjectMeta      Meta              = 1;
    string                 Key               = 2;
    UpgRespStateType       UpgAppRespVal     = 3 [(delphi.event) = true];
    string                 UpgAppRespStr     = 4;
}

message UpgApp {
    option (delphi.update_event) = true;
    delphi.ObjectMeta      Meta              = 1;
    string                 Key               = 2;
}
